<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:contentPadding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_text_handling_create1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginBottom="16dp"
            android:textSize="@dimen/text_size_medium"
            android:hint="@string/repo_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_text_handling_create2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginBottom="16dp"
            android:textSize="@dimen/text_size_medium"
            android:hint="@string/repo_link"
            android:inputType="text" />

        <Button
            android:id="@+id/button_handling_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textSize="@dimen/text_size_medium"
            android:backgroundTint="#28A745"
            android:text="@string/add_repo" />
    </LinearLayout>

</androidx.cardview.widget.CardView>
