<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:contentPadding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_text_handling_manage1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginBottom="16dp"
            android:textSize="@dimen/text_size_medium"
            android:inputType="text"
            android:enabled="false" />

        <LinearLayout
            android:id="@+id/linear_layout_handling_manage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_handling_manage1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:textSize="@dimen/text_size_medium"
                android:text="@string/push"
                app:icon="@drawable/arrow_upward_48px" />

            <Button
                android:id="@+id/button_handling_manage2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:textSize="@dimen/text_size_medium"
                android:text="@string/pull"
                app:icon="@drawable/arrow_downward_48px" />
        </LinearLayout>

        <Button
            android:id="@+id/button_handling_manage3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/text_size_medium"
            android:backgroundTint="#DC3545"
            android:text="@string/delete_repo"
            app:icon="@drawable/delete_48px" />
    </LinearLayout>

</androidx.cardview.widget.CardView>
